screnreader on inputs, really long text wraps correctly. Now to figure out reading the lists out (give them id's?) and telling the user that you can delete individual items

--- a/RecipeBuilder.css
+++ b/RecipeBuilder.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    --container-width: 35vw;
 }
 body {
     background-color: bisque;
@@ -14,12 +15,14 @@ h1 {
 }
 button {
     flex-grow: 1;
-    flex-basis: 100px;
+    flex-basis: 25px;
+}
+section {
+    display: flex;
+    width: var(--container-width);
 }
 .ingredients, .instructions {
-    display: flex;
     flex-direction: column;
-    flex-basis: 25vh;
     padding: 8px 16px;
     border: 2px solid black;
     border-radius: 25px;
@@ -29,10 +32,8 @@ button {
     flex-direction: row;
 }
 input {
-    display: flex;
-    flex-grow: 4;
-    flex-basis: 300px;
-    /* how to set a horizontal basis? */
+    flex: 4 4;
+    min-width: 5px;
 }
 ul {
     display: flex;
@@ -42,18 +43,22 @@ ul {
 }
 li {
     font-size: 14px;
-    text-wrap: wrap;
+    overflow-wrap: break-word;
 }
 li:hover {
     color: rgb(76, 1, 1);
     text-decoration: line-through rgb(255, 70, 70) 2px;
 }
 .button-spacer {
-    flex-grow: 4;
-    flex-basis: 500px;
+    flex-grow: 1;
+    flex-basis: 400px;
 }
 #button-container {
     display: flex;
     margin-top: 20px;
+    width: var(--container-width);
     gap: 10px;
+}
+#button-container > button {
+    flex-basis: 150px;
 }
